<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.mihir.notificationtracker.ui.screens.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/allNotif"
        android:name="com.mihir.notificationtracker.ui.screens.AllNotificationFragment"
        android:label="All Notifications" />

    <fragment
        android:id="@+id/appBasedNotifs"
        android:name="com.mihir.notificationtracker.ui.screens.AppWiseNotificationFragment"
        android:label="App Wise Notifications"
        tools:layout="@layout/fragment_app_wise_notification" />

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.mihir.notificationtracker.ui.screens.AnalyticsFragment"
        android:label="Analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/importantMessagesFragment"
        android:name="com.mihir.notificationtracker.ui.screens.ImportantMessagesFragment"
        android:label="@string/important_messages" />

    <fragment
        android:id="@+id/manageContactsFragment"
        android:name="com.mihir.notificationtracker.ui.screens.ManageContactsFragment"
        android:label="@string/manage_contacts" />

    <fragment
        android:id="@+id/reminderSettingsFragment"
        android:name="com.mihir.notificationtracker.ui.screens.ReminderSettingsFragment"
        android:label="@string/reminder_settings" />

</navigation>